# adafruit-nrf52840-rust-discovery

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
.github/workflows/: rust_ci.yml
examples/: blinky.rs  hello.rs  rgBlinky.rs
softdevice-tests/: Cargo.toml  build.rs  memory.x
softdevice-tests/examples/: ble_scan.rs  softdevice_check.rs  softdevice_mem_check.rs
softdevice-tests/src/: main.rs
src/: main.rs
