[package]
authors = ["Mariusz Jurgielewicz <mordor@mail.com>"]
edition = "2018"
readme = "README.md"
name = "adafruit-nrf52840-rust-discovery"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.5"
adafruit-nrf52840-express = "0.2.0"
panic-halt = "1.0.0"


[dev-dependencies]


# this lets you use `cargo fix`!
[[bin]]
name = "adafruit-nrf52840-rust-discovery"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
