[package]
name = "adafruit-nrf52840-rust-discovery"
version = "0.1.0"
edition = "2021"
authors = ["Mariusz Jurgielewicz <mordor@mail.com>"]
readme = "README.md"

[dependencies]
embassy-executor  = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-nrf       = { version = "0.2", features = ["nrf52840", "time-driver-rtc1", "gpiote"] }
cortex-m-rt       = "0.7"
defmt             = "0.3"
defmt-rtt         = "0.4"
panic-probe       = { version = "0.3", features = ["print-defmt"] }

[dev-dependencies]
embassy-time      = { version = "0.3" }
smart-leds        = "0.4.0"
ws2812-spi        = "0.5.1"

[profile.release]
codegen-units = 1
debug         = true
lto           = true

[profile.dev]
debug         = true
opt-level     = 1    # needed to avoid stack overflows in debug builds with Embassy
