[package]
name = "softdevice-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor  = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "integrated-timers", "defmt"] }
embassy-nrf       = { version = "0.2", features = ["nrf52840", "time-driver-rtc1", "gpiote", "rt", "defmt"] }
cortex-m-rt       = "0.7"
cortex-m          = "0.7.6"
defmt             = "0.3"
defmt-rtt         = "0.4"
panic-probe       = { version = "0.3", features = [] }
nrf-softdevice    = { version = "0.1.0", default-features = false, features = ["s140", "nrf52840", "ble-peripheral", "defmt", "critical-section-impl"] }

[dev-dependencies]
embassy-time      = { version = "0.3" }
